--- a/index.html
+++ b/index.html
@@ -60,73 +60,73 @@
                 <div class="items">
                   <div class="img img1"><img src="assets/armless.jpg" alt=""></div>
                   <div class="name">armless</div>
-                  <div class="price">$5</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur.</div>
                 </div>
                 <div class="items">
                   <div class="img img2"><img src="assets/coverhead.jpg" alt=""></div>
                   <div class="name">coverhead</div>
-                  <div class="price">$6.34</div>
+                  <div class="price">$60</div>
                   <div class="info">Lorem ipsum dolor sit.</div>
                 </div>
                 <div class="items">
                   <div class="img img3"><img src="assets/jacket and skirt.jpg" alt=""></div>
                   <div class="name">jacket and skirt</div>
-                  <div class="price">$9</div>
+                  <div class="price">$70</div>
                   <div class="info">Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/mini-spag.jpg" alt=""></div>
                   <div class="name">mini-spag</div>
-                  <div class="price">$9.1</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/onehand.jpg" alt=""></div>
                   <div class="name">onehand</div>
-                  <div class="price">$20</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/roundneck.jpg" alt=""></div>
                   <div class="name">roundneck</div>
-                  <div class="price">$18</div>
+                  <div class="price">$70</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/turtleneck-name.jpg" alt=""></div>
                   <div class="name">turtleneck-name</div>
-                  <div class="price">$6.7</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/turtleneck.jpg" alt=""></div>
                   <div class="name">turtleneck</div>
-                  <div class="price">$10</div>
+                  <div class="price">$70</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/v-neck.jpg" alt=""></div>
                   <div class="name">v-neck</div>
-                  <div class="price">$9.9</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="./assets/ash-long.jpg" alt=""></div>
                   <div class="name">ash-long</div>
-                  <div class="price">$99</div>
+                  <div class="price">$70</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="/assets/blue-turtle.jpg" alt=""></div>
                   <div class="name">blue-turtle</div>
-                  <div class="price">$30</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/f-long.jpg" alt=""></div>
                   <div class="name">f-long</div>
-                  <div class="price">$29.7</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
@@ -144,24 +144,24 @@
                 <div class="items">
                   <div class="img img1"><img src="assets/mixed-colour.jpg" alt=""></div>
                   <div class="name">mixed-colour</div>
-                  <div class="price">$9</div>
+                  <div class="price">$50</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/gilato-glasses.jpg" alt=""></div>
                   <div class="name">gilato-glasses</div>
-                  <div class="price">$36.5</div>
+                  <div class="price">$100</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/jacket and skirt.jpg" alt=""></div>
-                  <div class="name">SAREES</div>
-                  <div class="price">$25.6</div>
+                  <div class="name">J & S</div>
+                  <div class="price">$100</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
                 <div class="items">
                   <div class="img img1"><img src="assets/sir-new.jpg" alt=""></div>
-                  <div class="name">mix</div>
+                  <div class="name">mix-wears</div>
                   <div class="price">$56</div>
                   <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
                 </div>
